# aether

./: .gitignore  Cargo.toml  rust-toolchain.toml
.github/workflows/: verify.yml
cli/: Cargo.toml
cli/src/: daemon.rs  hitlc.rs  lib.rs  main.rs  orchestrator.rs  run.rs  watch.rs
cli/tests/: e2e_edid.rs  watch_daemon.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: build_sandbox.rs  intent_parse.rs  lib.rs  llm.rs  nodes.rs  rustc_driver.rs  tdag.rs
crates/compiler/src/agents/: ca.rs  cra.rs  mod.rs  saa.rs
crates/compiler/src/agents/prompts/: ca_system.txt  cra_system.txt  saa_system.txt
crates/compiler/src/synth/: diagnostics.rs  mod.rs  repair.rs
crates/compiler/tests/: pipeline_nodes.rs  repair_loop.rs  rustc_driver.rs  saa.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: cozo_store.rs  hashchain.rs  lib.rs  schema.rs  temporal.rs
crates/ledger/tests/: ledger.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: aot.rs  blueprint_cache.rs  exec.rs  host.rs  lib.rs  limits.rs  net_guard.rs  wasi_caps.rs
crates/runtime/tests/: blueprint_cache.rs  capabilities.rs  sandbox.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: error.rs  lib.rs  types.rs
crates/verifier/: Cargo.toml
crates/verifier/schemas/: mutation.schema.json
crates/verifier/src/: invariants.rs  lib.rs  meta_schema.rs  z3_engine.rs
crates/verifier/tests/: invariants.rs  meta_schema.rs
docs/: CONTRIBUTING.md  RUNBOOK.md
docs/plans/: 2026-06-24-001-feat-aether-engine-v1-plan.md
examples/api-sync/: intent.json
examples/schema-transform/: intent.json
examples/utility-bills/: intent.json
openwiki/: .last-update.json  architecture.md  domain-concepts.md  ledger.md  operations.md  quickstart.md  runtime.md  synthesis.md  verification.md
verification/: README.md
verification/kani/: Cargo.toml
verification/kani/src/: lib.rs
verification/tla/: ledger.cfg  ledger.tla
