[workspace]
resolver = "2"
members = ["crates/sdk", "crates/compiler", "crates/runtime"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.96"
repository = "https://github.com/aether-engine/aether"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
blake3 = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
async-trait = "0.1"
petgraph = "0.8"
wasmtime = "46"
wasmtime-wasi = "46"
aether-sdk = { path = "crates/sdk" }
