[workspace]
resolver = "2"
members = ["crates/sdk", "crates/compiler", "crates/runtime", "crates/verifier", "crates/ledger", "cli"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.96"
repository = "https://github.com/aether-engine/aether"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
blake3 = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
async-trait = "0.1"
petgraph = "0.8"
wasmtime = "46"
wasmtime-wasi = "46"
jsonschema = "0.46"
z3 = { version = "0.20.1", features = ["vendored"] }
cozo = { version = "0.7.6", default-features = false, features = ["minimal", "graph-algo"] }
libc = "0.2"
seccompiler = "0.5"
aether-sdk = { path = "crates/sdk" }
aether-compiler = { path = "crates/compiler" }
aether-runtime = { path = "crates/runtime" }
aether-verifier = { path = "crates/verifier" }
aether-ledger = { path = "crates/ledger" }
