[package]
name = "aether-compiler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "AETHER IPSE: Claude HTTP client, synthesis agents, t-DAG, and the compile-critic loop."

[dependencies]
aether-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
async-trait.workspace = true
petgraph.workspace = true

[dev-dependencies]
tokio = { workspace = true }
