[package]
name = "aether-ledger"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "AETHER USL: append-only, bi-temporal, hash-chained semantic ledger over CozoDB."

[dependencies]
aether-sdk.workspace = true
cozo.workspace = true
serde_json.workspace = true
blake3.workspace = true
thiserror.workspace = true
