[package]
name = "aether-verifier"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "AETHER FVL: meta-schema validation gate (U8); Z3 invariant engine added in U7."

[dependencies]
aether-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonschema.workspace = true
thiserror.workspace = true
